[gd_scene load_steps=6 format=3 uid="uid://cmhvosrsk22vw"]

[ext_resource type="Script" path="res://characters/player_story.gd" id="1_vdhmo"]
[ext_resource type="Texture2D" uid="uid://dwnt674r6404p" path="res://assets/character_sprites/player_no_wing.png" id="2_jt53d"]
[ext_resource type="AudioStream" uid="uid://bce0gwu7cwrfy" path="res://assets/audio/run.ogg" id="3_28cbb"]
[ext_resource type="Texture2D" uid="uid://bfmqb81l2qxqb" path="res://assets/character_sprites/player.png" id="3_086a5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqoiv"]
size = Vector2(119, 402)

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_vdhmo")

[node name="NoWing" type="TextureRect" parent="."]
offset_left = -183.0
offset_top = -64.0
offset_right = 370.0
offset_bottom = 456.0
texture = ExtResource("2_jt53d")
expand_mode = 1

[node name="Wing" type="TextureRect" parent="."]
visible = false
offset_left = -183.0
offset_top = -64.0
offset_right = 370.0
offset_bottom = 456.0
texture = ExtResource("3_086a5")
expand_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(95, 203)
shape = SubResource("RectangleShape2D_vqoiv")

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]

[node name="RunAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_28cbb")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
